--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./Components/Assets/SamanthaProfessional.jpg');
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: none;
 }
 
 code {
