--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes Form-show {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
   }
   to {
-    transform: rotate(360deg);
+    opacity: 1;
   }
 }
+
+@keyframes Form-hide {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 #root .hide {
   display: none;
-  transition: display 1s ease-out;
+}
+
+.animIn {
+  display: flex;
+  animation: Form-show 1s linear;
 }
 .appwrap {
-  z-index: -1;
+}
+.animOut {
+  animation: Form-hide 1s linear;
+}
+.keepPos {
+  margin-top: -46.5%;
+  /* z-index: -1; */
 }
